# iam-jit

./: .cfnlintrc  .dockerignore  .gitignore  .pre-commit-config.yaml  1778984356.275547.db  1778984371.847697.db  1778984379.998304.db  CHANGELOG.md  DESIGN.md  Dockerfile  KBOUNCER.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.test.yml  install.sh  pyproject.toml
.github/workflows/: docker-publish.yml  dogfood-nightly.yml  dogfood-orphan-sweeper.yml  linux-install-matrix.yml  publish-docker-bundle.yml  publish-sidecar-image.yml  silent-degradation-lint.yml  validate.yml
docs/: ADVERSARIAL-LOOP-PROCESS.md  AGENT-ATTRIBUTION.md  AGENT-DEPLOYMENT-PROMPT.md  AGENT-DIFF-DESIGN.md  AGENT-DIFF-USAGE.md  AGENT-WRITING-ROLES.md  AGENTS.md  ANOMALY-DETECTION.md  AUDIT-STREAM-TUI.md  BACKUP-RESTORE.md  BEDROCK-TEST-PLAN.md  BOOTSTRAP.md  BOUNCER-CHAINING.md  CALIBRATION-SWEEP-2026-05-19.md  CANARY.md  CI-FRIENDLY-MODE.md  CI-INIT-EXIT-CODES.md  CI-NIGHTLY-DOGFOOD.md  CI-RECIPES.md  COMPATIBILITY-ALLOWLIST.md  COMPETITIVE-PI-ANOMALY-2026-05-24.md  CONTRIBUTING.md  CONVERGENCE-REPORT-2026-05.md  CORP-MANAGED-DEPLOYMENT.md  DEPLOY-FEEDBACK-TEMPLATE.md  DEPLOYMENT-PRESETS.md  DEPLOYMENT.md  DIAGNOSTICS.md  DOCKER-BUNDLE.md  DOCKER-CLAUDE-INTEGRATION.md  DYNAMIC-DENY-RULES.md  ENTERPRISE-SELF-BOOTSTRAP.md  EVALUATOR.md  EVOLVING-THE-SCORER.md  FEATURES.md  FORKING.md  GETTING-STARTED.md  GITHUB-ACTION-RECIPE.md  HALLUCINATED-TOOL-CALL-DESIGN.md  HALLUCINATED-TOOL-CALL-USAGE.md  (+77 more)
docs-site/: mkdocs.yml
docs-site/docs/: api-reference.md  blacklist.md  calibration.md  cli-reference.md  compliance.md  getting-started.md  github-action.md  index.md  pricing.md  production-hardening.md  self-hosting.md
docs/COMPARISONS/: kong-capability-tokens.md
docs/HARNESS-RECIPES/: README.md  audit-to-effective-profile.md  bouncer-history-to-config-pattern.md  bouncer-to-role-pattern.md  claude-code.md  codex.md  cursor.md  custom-harness.md  devin.md
docs/UAT-LIFECYCLE/: HARNESS-SPEC.md  README.md  aggregate.py  results-template.jsonl
docs/calibration/: 100-prompt-sufficiency-loop.md  CALIBRATION-LOG.md  feature-reality-check.md
docs/comic-scripts/: 01-dont-give-claude-your-keys.md  02-the-2am-page.md  README.md
docs/competitive/: REANALYSIS-2026-06-04.md
docs/compliance/: COMPLIANCE-MAPPING.md
docs/demo/: README.md  SCENARIO-A-comic-strip.md  SCENARIO-A-dev-amendment.md  SCENARIO-B-cicd-compromise.md  SCENARIO-D-secrets-rotation.md  SCENARIO-E-agent-guardrail.md  SCENARIO-F-comic-strip.md
docs/design/: github-jit-tokens.md
docs/integrations/: HOOP-IAMJIT.md  HOOP-PARTNERSHIP-PLAN.md
docs/launch-posts/: DONT-GIVE-CLAUDE-FULL-ADMIN.md  DONT-GIVE-CLAUDE-YOUR-AWS-KEYS.md  GITHUB-ACTION-MARKETPLACE-CHECKLIST.md
docs/posts/: 2026-iam-jit-native.md  2026-launch-i-adversarially-tested-my-iam-scorer.md
docs/recipes/: AGENT-IAMJIT-HOOP-EXAMPLES.md  GOOGLE-OIDC-SSO.md  IAM-JIT-FOR-ADMIN-SAFETY.md  MFA-PROPAGATION.md  OUTSTANDING-REQUEST-CAP.md  SLACK-APP-SETUP.md  agent-safety-mode.md
docs/research/: IAM-BYPASS-RESEARCH.md
docs/schemas/: dynamic-denies-v1.json
docs/security/: AUDIT-2026-05-BB-ROUND2.md  AUDIT-2026-05-BB-ROUND3.md  AUDIT-2026-05-BB-ROUND4.md  AUDIT-2026-05-BB-ROUND5.md  AUDIT-2026-05-BB-ROUND6.md  AUDIT-2026-05-BB.md  AUDIT-2026-05-WB-ROUND10-DELTA.md  AUDIT-2026-05-WB-ROUND11-DELTA.md  AUDIT-2026-05-WB-ROUND12-MFA-ENFORCEMENT.md  AUDIT-2026-05-WB-ROUND13-VERIFY.md  AUDIT-2026-05-WB-ROUND2.md  AUDIT-2026-05-WB-ROUND3.md  AUDIT-2026-05-WB-ROUND4.md  AUDIT-2026-05-WB-ROUND5.md  (+25 more)
examples/: custom-pii-detectors.example.yaml  example-request.json  example-request.yaml  org-context.example.yaml  users.yaml
feeds/: README.md  build_bootstrap_feed.py  official-v1.json  official-v1.pubkey
github-action/: README.md  action.yml
landing-site/: package-lock.json  package.json
mcp-server/: README.md  iam_jit_mcp.py  pyproject.toml
mcp-server/tests/: test_mcp_tools.py
partnership-outreach/: iam-jit-with-nanoclaw.md
recordings/: README.md  _convert_only.py  run_all.py
schemas/: INDEX.md  admin-action-event.schema.json  backup-metadata.schema.json  diagnostics-manifest.schema.json  iam-jit-config.schema.json  request.schema.json  users.schema.json
scripts/: README.md  aws_mcp_uat.py  aws_usage_builder.crontab.example  aws_usage_builder.py  calibrate-loop.py  check_no_personal_paths.sh  claim-bootstrap.py  compare-models.py  corpus-histogram.py  deploy-ci-dogfood-iam.sh  fetch-aws-managed-policies.py  generate-adversarial-corpus.py  generate-adversarial-policies.py  import-retained.sh  pull-test-models.sh  random_policy_fuzz.py  random_policy_fuzz_compare.py  random_policy_fuzz_oracle_prompt.md  render_github_walkthrough.py  round-stats.py  setup_github_app.py  sync-lambda-data.sh  test-local.sh
src/: requirements.txt
tests/: conftest.py  conftest_routes.py  test_access_type.py  test_accounts_store.py  test_admin_approve_no_zombie_provisioning_610.py  test_admin_dismiss_warning_local_635.py  test_admin_log_retention_patch_no_region_636.py  test_admin_network_lockout_prevention_609.py  test_admin_revoke_tokens.py  test_admin_web_views.py  test_app.py  test_app_500_handler.py  test_appsec_audit_round1_bb.py  test_appsec_audit_round1_wb.py  test_appsec_audit_round2_bb.py  test_appsec_audit_round2_wb.py  test_appsec_audit_round3_bb.py  test_appsec_audit_round3_wb.py  test_appsec_audit_round4_bb.py  test_appsec_audit_round4_wb.py  test_appsec_audit_round5_bb.py  test_appsec_audit_round5_wb.py  test_appsec_audit_round6_bb.py  test_appsec_audit_round6_wb.py  test_appsec_audit_round7_focused.py  test_assume.py  test_attack_vectors.py  test_attack_vectors_round2.py  test_audit.py  test_audit_export_warn_711.py  test_audit_query_surfaces_serve_events_620.py  test_audit_tamper_proof.py  test_audit_webhook_presets_list.py  test_auth.py  test_auto_approve.py  test_auto_approve_evaluator_mfa_fail_closed.py  test_auto_approve_helpers_parity.py  test_auto_approve_safety_mode.py  test_aws_managed_catalog.py  test_ban_uniformity.py  (+200 more)
(+3231 files in other folders)
