[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-jit"
version = "0.0.1"
description = "Self-hosted, GitOps-driven, time-bound, least-privilege AWS IAM role provisioning."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "ruamel.yaml>=0.18",
  "jsonschema>=4.21",
  "policy_sentry>=0.13",
  "boto3>=1.34",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "itsdangerous>=2.2",
  "mangum>=0.17",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34"]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "moto[iam,sts,events,lambda]>=5",
  "respx>=0.21",
  "httpx>=0.27",
]
e2e = [
  "playwright>=1.50",
  "pytest-playwright>=0.5",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "moto[iam,sts,events,lambda]>=5",
  "respx>=0.21",
  "httpx>=0.27",
  "ruff>=0.4",
  "cfn-lint>=1.0",
]

[project.scripts]
iam-jit = "iam_jit.cli:main"
iam-risk-score = "iam_jit.cli_score:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not integration and not e2e"]
markers = [
  "integration: tests that require Docker-hosted services (LocalStack, Ollama)",
  "e2e: end-to-end tests that exercise the full stack via docker-compose",
]
asyncio_mode = "auto"
