[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-jit"
version = "1.0.0"
description = "Score AWS IAM policies for risk; gate AWS API calls + issue JIT credentials. Deterministic + LLM-augmented scoring as an API, CLI, MCP server, and GitHub Action."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["iam", "aws", "security", "risk-scoring", "policy", "ai-agents", "ci-cd", "devsecops"]
authors = [{ name = "trsreagan3", email = "trsreagan3@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
  "click>=8.1",
  "ruamel.yaml>=0.18",
  "jsonschema>=4.21",
  "policy_sentry>=0.13",
  "boto3>=1.34",
  "httpx>=0.27",
  "fastapi>=0.115",
  "aiohttp>=3.9",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "itsdangerous>=2.2",
  "mangum>=0.17",
  "python-multipart>=0.0.9",
  "PyJWT[crypto]>=2.8",
  "rich>=13",
  # #324a — dynamic-deny YAML watcher. fsevents/inotify cross-platform
  # backend used by `iam_jit.dynamic_denies.watcher`. Optional at import
  # time (the loader falls back to mtime polling when watchdog is absent
  # — see `_load_observer()`); declared as a runtime dep so a pip-installed
  # build gets fsevents/inotify out of the box.
  "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/trsreagan3/iam-jit"
Documentation = "https://github.com/trsreagan3/iam-jit#readme"
Source = "https://github.com/trsreagan3/iam-jit"
Issues = "https://github.com/trsreagan3/iam-jit/issues"

[project.optional-dependencies]
# Legacy alias — kept for back-compat with deployment docs / pip
# instructions that predate the pluggable-backend slice. Maps to
# the Anthropic-API backend.
llm = ["anthropic>=0.34"]
# Per-backend extras (pluggable-backend slice 2026-05-19). Operators
# install only the providers their deployment uses; defaults to
# zero extra deps. See docs/LLM-BACKENDS.md for the matrix.
bedrock = []          # boto3 is a base dep; no extra wheel needed
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
ollama = []           # httpx is a base dep; Ollama is local + zero-cost
all-llm-backends = ["anthropic>=0.34", "openai>=1.40"]
# #258 — AWS Security Lake audit-export adapter. pyarrow is heavy
# (~30 MB wheel) so we keep it out of the base install; operators
# who enable --security-lake-bucket pip-install the extra.
security-lake = ["pyarrow>=14"]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "moto[iam,sts,events,lambda,s3]>=5",
  "respx>=0.21",
  "httpx>=0.27",
  "pyarrow>=14",
]
e2e = [
  "playwright>=1.50",
  "pytest-playwright>=0.5",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "moto[iam,sts,events,lambda,s3]>=5",
  "respx>=0.21",
  "httpx>=0.27",
  "ruff>=0.4",
  "cfn-lint>=1.0",
  "pyarrow>=14",
  # LLM backend deps (pluggable-backend slice #291). Tests in tests/llm/
  # exercise per-backend adapters; CI must install both so the
  # 16-test backend suite runs.
  "anthropic>=0.34",
  "openai>=1.40",
]

[project.scripts]
iam-jit = "iam_jit.cli:main"
iam-risk-score = "iam_jit.cli_score:main"
# Bounce-suite rename (2026-05-17): `ibounce` is the canonical bouncer
# CLI as of v1.0. `iam-jit-bouncer` keeps working as a deprecation-
# wrapper console-script that prints a stderr warning + forwards to
# the same Click app; removed in v1.1.
ibounce = "iam_jit.bouncer_cli:main"
iam-jit-bouncer = "iam_jit.bouncer_cli:main_deprecated_alias"
# #409 / §A53 — threat-feed publisher tooling. Separate entry-point so
# operator-only deployments don't accidentally surface signing tools.
iam-jit-feed-publish = "iam_jit.threat_feed.cli_publisher:main"

[tool.setuptools]
# §A23 / #342 — explicitly ship LICENSE + NOTICE in the wheel so
# pip-installed users see the same Apache-2.0 + attribution as the
# repo. Kept in the setuptools-native table (not PEP 639 `project.
# license-files`) so we don't have to bump `setuptools>=68` to
# `>=77.0.3` just for this slice.
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Schema JSONs + templates are loaded via `_resources.find` at
# runtime. Without explicit inclusion setuptools ships only .py
# files and `iam-jit` fails on first import (request validation,
# user-store load, account discovery). Caught during the TestPyPI
# dry-run on 2026-05-16.
#
# #692 (2026-05-28 dogfood agent #691): infrastructure/cloudformation/
# also must ship — onboarding.py imports the CFN template at module-
# import time via _resources.find("infrastructure","cloudformation",
# "destination-account-roles.yaml"). Without this glob, the file is
# stripped from the wheel and `iam-jit serve --local` raises
# FileNotFoundError at import in any pip-installed venv. The file is
# mirrored from the canonical repo-root location into
# src/iam_jit/infrastructure/ by scripts/sync-lambda-data.sh.
"iam_jit" = [
  "schemas/*.json",
  "templates/*.html",
  "templates/**/*.html",
  "static/**/*",
  "infrastructure/**/*.yaml",
  "infrastructure/**/*.md",
  "py.typed",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not integration and not e2e"]
markers = [
  "integration: tests that require Docker-hosted services (LocalStack, Ollama)",
  "e2e: end-to-end tests that exercise the full stack via docker-compose",
  "slow: tests that intentionally exercise expensive paths (e.g. fsync per write)",
]
asyncio_mode = "auto"
