[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-jit-mcp"
version = "0.0.1"
description = "MCP server bundle for iam-jit. Exposes iam-jit's HTTP API as Model Context Protocol tools so agents (Claude Code, Cursor, Continue) can call iam-jit natively."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "respx>=0.21",
  "pytest-asyncio>=0.23",
]

[project.scripts]
iam-jit-mcp = "iam_jit_mcp:main"

[tool.setuptools]
py-modules = ["iam_jit_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
